Issued the horizontal scrolling issue

--- a/css/main.css
+++ b/css/main.css
@@ -12,8 +12,14 @@
 
 body {
 background-color: #d8e2dc;
-object-fit: cover;
-overflow-x: hidden;
+}
+
+body {
+  overflow-x: hidden !important;
+}
+.container {
+  max-width: 100% !important;
+  overflow-x: hidden !important;
 }
 
 
@@ -42,12 +48,6 @@ overflow-x: hidden;
   box-shadow: 0px 0px 12px -1px rgba(0,0,0,0.75);
 
     /* the rest of your styling */
-}
-
-/* Hero Image */
-.img-fluid {
-  width:100%;
-  height: 500px;
 }
 
 /* Card */
